--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub Page</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Document</title>
+    <link rel="stylesheet" href="card.css">
 </head>
 <body>
-    <h1>Welcome to My GitHub Page</h1>
-    <p>This is a simple GitHub Pages site.</p>
+    <div>
+        <img src="boy.jpg" alt="male">
+        <h3>Data analyst</h3>
+    </div>
+    <div>
+        <img src="girl.jpg" alt="female">
+        <h3>Web Developer</h3>
+    </div>
 </body>
 </html>
